--- a/TransitApp.API/TransitApp.API.csproj
+++ b/TransitApp.API/TransitApp.API.csproj
@@ -11,5 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1"/>
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0"/>
+    <PackageReference Include="GeoCoordinate" Version="2.0.1"/>
   </ItemGroup>
 </Project>
