--- a/transitapp-spa/package.json
+++ b/transitapp-spa/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
-    "react": "^16.13.1",
+    "leaflet": "^1.7.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-jwt": "^1.0.7",
+    "react-leaflet": "^2.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
